--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -70,7 +70,7 @@
 
 @media (max-width: 900px) {
     .navbar {
-        padding: 20px 8%;
+        padding: 0 8%;
         position: relative;
     }
 
