add: framer motion + faq drop down

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -191,6 +191,7 @@
 .need .bottom div img {
     width: 100%;
     height: 350px;
+    object-fit: cover;
 }
 
 /* -------------------------- Showcase ----------------------------*/
@@ -479,7 +480,7 @@
     .showcase .card .top img {
         width: 50px;
         padding: 12px;
-        }
+    }
 
 }
 
