--- a/src/pages/CourseContent/CourseContent.css
+++ b/src/pages/CourseContent/CourseContent.css
@@ -74,7 +74,7 @@ pre code {
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: #007bff;
+    background-color: #E76F00;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -87,7 +87,7 @@ pre code {
 }
 
 .copy-button:hover {
-    background-color: #0056b3;
+    background-color: #ad5502;
 }
 
 pre {
