--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -27,6 +27,7 @@
 .hero h1 {
     font-size: 4rem;
     margin-bottom: 1rem;
+    line-height: 1;
 }
 
 .hero h2{
@@ -39,6 +40,7 @@
     max-width: 500px;
     font-size: 1.2rem;
     margin-bottom: 2rem;
+    line-height: 1.75rem;
 }
 
 .hero .invite {
