--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,15 @@
 }
 
 :root {
-  --color-primary: #E76F00;
+  /* --color-primary: #88ce83; */
+  --color-primary: #499c43;
   --color-secondary: hsl(217, 30%, 12%);
   --color-tertiary: hsl(214, 29%, 17%);
   --color-extra: hsl(225, 18%, 37%);
 
   /* --bg-body: #0e0f0f; */
   --bg-body: #f0f0f0;
+  --bg-highlight: #ddeadf;
 
   --border-cta: #d8d8d8;
 
@@ -24,7 +26,7 @@
 
   --white: hsl(0, 0%, 95%);
   --black: hsl(0, 0%, 0%);
-  --red: hsl(0, 100%, 31%);
+  --red: hsl(0, 100%, 50%);
 }
 
 body {
@@ -36,18 +38,41 @@ body {
   scroll-behavior: smooth;
 }
 
+body::-webkit-scrollbar{
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--bg-highlight);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--color-primary);
+  border-radius: 10px;
+  border: 3px solid var(--color-primary);
+}
+
+h1{
+  margin-top: 50px;
+}
+
+h1, h2{
+  text-align: center;
+}
+
 h1,
 h2,
 h3,
 h4 {
   font-family: 'Poppins', sans-serif;
+  margin-bottom: 50px;
 }
 
 h1 span,
 h2 span,
 h3 span,
 h4 span {
-  background: -webkit-linear-gradient( #E76F00, #E76F00, #5382A1);
+  /* background: -webkit-linear-gradient( #499c43, #499c43, #5382A1); */
+  background: -webkit-linear-gradient( #499c43, #499c43, #b1f08e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -77,22 +102,6 @@ p {
   line-height: 1.6;
 }
 
-code {
-  background: var(--color-extra);
-  color: var(--white);
-  padding: 0.2rem 0.4rem;
-  border-radius: 4px;
-  font-family: 'Poppins', monospace;
-}
-
-pre {
-  background: var(--color-extra);
-  color: var(--white);
-  padding: 1rem;
-  border-radius: 8px;
-  overflow-x: auto;
-}
-
 .cta{
   font-size: large;
   font-weight: 500;
@@ -105,6 +114,10 @@ pre {
   padding: 5px 15px;
   cursor: pointer;
   letter-spacing: .2px;
+}
+
+.cta:hover {
+  background-color: #3d8238;
 }
 
 .cta-secondary{
@@ -124,10 +137,10 @@ pre {
 .separator{
   margin: 80px 0;
   max-width: 900px;
-  background: -webkit-linear-gradient(#E76F00, #E76F00, #E76F00);  
+  background: -webkit-linear-gradient(#499c43, #499c43, #499c43);  
   height: 3px;
   border-radius: 50%;
-  box-shadow: 0px 0px 10px #E76F00;
+  box-shadow: 0px 0px 10px #499c43;
   width: 80%;
 }
 .align {
@@ -142,33 +155,53 @@ pre {
   text-align: center;
 }
 
-/* Specific Styles for Course Content */
-.course-content {
+.content-wrapper{
   max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: .5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #f0f0f0;
+  text-align: center;
 }
 
-.course-content pre {
-  white-space: pre-wrap;
-  /* Ensure long lines wrap correctly */
+
+.loader-container{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.course-content code {
-  font-size: 1rem;
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  display: grid;
+  animation: l14 4s infinite;
 }
 
-.course-content h1,
-.course-content h2,
-.course-content h3,
-.course-content h4 {
-  margin-top: 1rem;
-  margin-bottom: 0.5rem;
+.loader::before,
+.loader::after {
+  content: "";
+  grid-area: 1/1;
+  border: 8px solid;
+  border-radius: 50%;
+  border-color: var(--txt-clr) var(--txt-clr) #0000 #0000;
+  mix-blend-mode: darken;
+  animation: l14 1s infinite linear;
 }
 
-.course-content p {
-  font-size: 1rem;
-  margin: 1rem 0;
+.loader::after {
+  border-color: #0000 #0000 var(--color-primary) var(--color-primary);
+  animation-direction: reverse;
+}
+
+@keyframes l14 {
+  100% {
+    transform: rotate(1turn)
+  }
 }
 
 /* Responsive Design */
@@ -177,9 +210,6 @@ pre {
     font-size: 1.4rem;
   }
 
-  .course-content {
-    padding: 1rem;
-  }
   h1 {
     font-size: 2rem;
   }
@@ -201,7 +231,4 @@ pre {
     font-size: 1.2rem;
   }
 
-  .course-content {
-    padding: 0.5rem;
-  }
 }
