--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -100,6 +100,11 @@
         flex-direction:column ;
         justify-content: flex-start;
     }
+
+    .footer .logo{
+        width: 280px;
+        height: 300px;
+    }
 }
 
 @media (max-width: 767px) {
